<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity" >

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_category"
        android:orderInCategory="100"
        android:title="@string/menu_add_category"
        app:showAsAction="ifRoom"
        android:onClick="onMenuAddCategoryClick" />

    <item
        android:id="@+id/action_filter_category"
        android:orderInCategory="100"
        android:title="@string/menu_filter_category"
        app:showAsAction="ifRoom"
        android:onClick="onMenuFilterCategoryClick" />

    <item
        android:id="@+id/action_remove_filter_category"
        android:orderInCategory="100"
        android:title="@string/menu_remove_filter_category"
        app:showAsAction="ifRoom"
        android:onClick="onMenuRemoveFilterCategoryClick" />
</menu>
