<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_save_category_fragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/v_nav_item_top_padding"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_default_padding"/>

    <TextView
        android:id="@+id/tv_label"
        android:text="@string/action_save_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/et_input_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_category"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/b_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_button" />
    <Button
        android:id="@+id/b_random_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/random_color_button" />

</LinearLayout>